<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:textAppearance="@style/AppTheme.TextAppearance.Bold"
        android:text="@string/welcome"/>
    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/playstore_icon"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginBottom="20dp"
                android:text="@string/access"/>
            <Button
                android:id="@+id/facebookButton"
                android:layout_width="200dp"
                android:textAppearance="@style/AppTheme.TextAppearance.Bold"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/facebook"
                android:text="@string/facebook" />
            <Button
                android:id="@+id/googleButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:backgroundTint="@color/google"
                android:layout_marginBottom="5dp"
                android:textAppearance="@style/AppTheme.TextAppearance.Bold"
                android:text="@string/google"/>
            <Button
                android:id="@+id/emailButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:backgroundTint="@color/colorAccent"
                android:textAppearance="@style/AppTheme.TextAppearance.Bold"
                android:text="@string/email"/>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
</RelativeLayout>
